--- a/ViewKT.html
+++ b/ViewKT.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ViewKT.css" class="css">
+    <link rel="stylesheet" href="ViewKT.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0" />
     <title>Kon Tum có gì?</title>
@@ -42,7 +42,7 @@
             <div id="actions">
                 <form id="searchForm">
                     <input id="searchInput" class="input" type="text" placeholder="Search" />
-                    <button id="searchButton" class="btn" type="submit">
+                    <button id="searchButton" class="btn1" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                     <div id="suggestions" class="suggestions"></div>
