--- a/Bonne.html
+++ b/Bonne.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0" />
     <link rel="stylesheet" href="Bonne.css">
     <script src="home.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 
@@ -44,7 +43,7 @@
             <div id="actions">
                 <form id="searchForm">
                     <input id="searchInput" class="input" type="text" placeholder="Search" />
-                    <button id="searchButton" class="btn" type="submit">
+                    <button id="searchButton" class="btn1" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                     <div id="suggestions" class="suggestions"></div>
