--- a/Dookki.html
+++ b/Dookki.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0" />
     <link rel="stylesheet" href="padthai.css">
+    <script src="home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -43,7 +45,7 @@
             <div id="actions">
                 <form id="searchForm">
                     <input id="searchInput" class="input" type="text" placeholder="Search" />
-                    <button id="searchButton" class="btn" type="submit">
+                    <button id="searchButton" class="btn1" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                     <div id="suggestions" class="suggestions"></div>
