--- a/DeVivre.html
+++ b/DeVivre.html
@@ -81,7 +81,7 @@
             <img src="DeViVre-Coffee.jpg" alt="" width="227.75" height="280">
             <img src="DeVivre-tea.jpg" alt="" width="227.75" height="280"> 
             <img src="DeVivre-Grinding.png" alt="" width="227.75" height="280">
-            <img src="DeViVre-Coffee2.jpg" alt="" width="227.75" height="280">
+            <img src="DeVivre-Coffee2.jpg" alt="" width="227.75" height="280">
         </div>
 
     </div>
