--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
             <div id="actions">
                 <form id="searchForm">
                     <input id="searchInput" class="input" type="text" placeholder="Search" />
-                    <button id="searchButton" class="btn" type="submit">
+                    <button id="searchButton" class="btn1" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                     <div id="suggestions" class="suggestions"></div>
